<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_item_new_todo"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="ifRoom|withText"
        android:title="@string/new_todo"/>

    <item
        android:id="@+id/menu_go_to_archive"
        android:icon="@android:drawable/ic_menu_set_as"
        android:showAsAction="collapseActionView"
        android:title="@string/archive_todo"/>
    <item
        android:id="@+id/menu_item_stats"
        android:icon="@android:drawable/ic_menu_compass"
        android:showAsAction="collapseActionView"
        android:title="@string/stats"/>
    <item
        android:id="@+id/menu_item_email_all"
        android:icon="@android:drawable/ic_dialog_email"
        android:showAsAction="collapseActionView"
        android:title="@string/email_all"/>
    
</menu>